--- a/aquario/style.css
+++ b/aquario/style.css
@@ -1,4 +1,4 @@
-/* reset das configs */
+/* reset das configurações */
 body, ul, li, p{
     margin: 0;
     padding: 0;
@@ -11,7 +11,7 @@ body{
     margin-bottom: 100px;
     background-color: #dee5ef;
 }
-/* tirar sublinhado */
+/* retirar sublinhado dos links */
 header a{
     text-decoration: none;
     color: #fff;
@@ -40,10 +40,12 @@ header{
     margin-left: 10px;
     margin-right: 50px;
 }
+
 h1{
     margin-top: 100px;
     text-align: center;
 }
+
 img{
     max-width: 100%;
     display: block;
@@ -51,21 +53,23 @@ img{
 
 /* flexbox 1 */
 .flex{
-    /* itens lado a lado */
+    /* itens lado a lado*/
     display: flex;
-    /* quebrar linha */
+    /* quebra linha */
     flex-wrap: wrap;
-    /* limitar o tamanho do container */
+    /* limitar tamanho do conainer */
     max-width: 800px;
     /* alinhar o container para o centro da tela */
     margin: 0 auto;
 }
+
 .flex > div{
     /* limita em 200px */
     flex: 1 1 200px;
-    /* gap entre os itens */
+    /* gap emtre os itens */
     margin: 10px;
 }
+
 /* GRID 1 */
 
 .grid1 {
@@ -159,6 +163,7 @@ img{
       margin: 0 10px;
     }
 }
+
 /* GRID 3 - coluna  */
 
 .grid3 {
